tests/negative/symbols/unused.orng
fn main() -> Int {
    let x = 132
    1
}